Fixed cheatbox not showing the items

--- a/src/components/topbar/css/topbar.css
+++ b/src/components/topbar/css/topbar.css
@@ -28,6 +28,7 @@
 
 .topbar .topbar-right .hamburger {
     cursor: pointer;
+    font-size: 20px;
 }
 
 .topbar span {
